# pylinky

./: README.md  pyproject.toml
src/pylinky/: __init__.py  client.py  exceptions.py  models.py
tests/: conftest.py  test_client.py  test_models.py
