[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylinky"
version = "0.1.0"
description = "Python client for the Conso API (Linky smart meter data)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Guilhem" }
]
keywords = ["linky", "enedis", "energy", "electricity", "smart-meter", "home-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pyjwt>=2.8.0",
    "certifi>=2023.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/guilhem/pylinky"
Repository = "https://github.com/guilhem/pylinky"
Documentation = "https://github.com/guilhem/pylinky#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/pylinky"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
